# prod-rag-chunker-package

./: README.md  pyproject.toml
examples/: config.yaml  sample.txt  sample_legal.txt  sample_output.json
src/prod_rag/: cli.py  embeddings.py  models.py
src/prod_rag/chunking/: chunker.py  classifier.py  metadata.py  parser.py  pipeline.py  service.py  strategy_selector.py  tokenizer.py
src/prod_rag/llm/: factory.py  llama_cpp_wrapper.py  vllm_wrapper.py
src/prod_rag/loaders/: base.py  docx_loader.py  factory.py  html_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py
src/prod_rag/pipeline/: prompts.py  rag_pipeline.py
src/prod_rag/service/: __init__.py  api.py
src/prod_rag/utils/: hashing.py  io.py
src/prod_rag/vectorstores/: base.py  elastic_store.py  factory.py  faiss_store.py  pgvector_store.py  qdrant_store.py
tests/: test_chunking.py  test_service.py
